--- a/.github/workflows/translate-docs.yml
+++ b/.github/workflows/translate-docs.yml
@@ -16,7 +16,7 @@ jobs:
       contents: write # 允许写入仓库内容
     strategy:
       matrix:
-        lang_code: ["en"]
+        lang_code: ["en", "es", "fr", "de", "ja", "ko", "ru", "pt", "it", "ar", "hi", "bn", "id", "th", "vi", "tr", "pl", "nl", "zh-tw"]
 
     steps:
       - name: Checkout repository
