--- a/.github/workflows/translate-docs.yml
+++ b/.github/workflows/translate-docs.yml
@@ -43,12 +43,20 @@ jobs:
         id: run-translation # 添加 id 以便引用输出
         run: python .github/scripts/translate_docs.py ${{ matrix.lang_code }}
 
+      - name: ls
+        run: |
+          ls -alR i18n/
+
       - name: Upload translated docs artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ steps.run-translation.outputs.lang_dir }} # 直接使用语言目录名作为 artifact 名称
-          path: i18n/${{ steps.run-translation.outputs.lang_dir }}/ # 使用 Python 脚本输出的目录名
-          retention-days: 1 # 仅保留一天，减少存储占用
+          name: ${{ steps.run-translation.outputs.lang_dir }}
+          # 使用多行字符串来定义路径，包括一个包含模式和排除模式
+          path: |
+            i18n/${{ steps.run-translation.outputs.lang_dir }}/**
+            !i18n/${{ steps.run-translation.outputs.lang_dir }}/.github/**
+          retention-days: 1
+          include-hidden-files: true # 确保包含以点开头的文件夹（如 .gitbook）
 
       - name: Upload translation status artifact
         uses: actions/upload-artifact@v4
@@ -83,6 +91,10 @@ jobs:
         with:
           pattern: translation-status-* # 使用 pattern 参数下载所有匹配的 artifact
           path: translation_status_output/ # 下载到临时目录
+
+      - name: ls
+        run: |
+          ls -alR i18n/
 
       - name: Summarize translation results
         run: |
