--- a/.github/workflows/translate-docs.yml
+++ b/.github/workflows/translate-docs.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install google-genai python-frontmatter openai # 移除 markdown-it-py
+          pip install google-genai python-frontmatter openai
 
       - name: Run Translation Script
         env:
