--- a/.github/workflows/translate-docs.yml
+++ b/.github/workflows/translate-docs.yml
@@ -37,11 +37,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.14'
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install google-genai python-frontmatter openai
+          pip install --upgrade google-genai python-frontmatter openai
 
       - name: Run Translation Script
         env:
