Add concurrency to update-download-version workflow
Add concurrency settings to the update-download-version workflow.

--- a/.github/workflows/update-download-version.yml
+++ b/.github/workflows/update-download-version.yml
@@ -10,6 +10,10 @@ on:
         required: true
         type: string
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   update-version:
     # 添加条件判断：如果是 repository_dispatch 触发（自动触发）
